objects/AE_Acknowledgement_Error__c.object
<CustomObject>
    <description>used to capture the errors encountered while uploading the records and to show in the csv file.</description>
    <fields>
        <fullName>AE_ack_Year__c</fullName>
        <label>AE ack Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Login_Error__c</fullName>
        <label>Employee Login Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <label>Error</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <label>Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AE Acknowledgement Error</label>
    <nameField>
        <label>AE A Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AE Acknowledgement Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>